<resources>
  <string name="app_name">SDK demo app</string>
  <string name="dashboard_hint">"Weekly average"</string>
  <string name="brushing_total">%s has %d brushings</string>
  <string name="latest_brushing_session">Latest brushing session : %d sec</string>
  <string name="tape_here_to_scan">Tape here to scan</string>
  <string name="setup_searching">"Searching for toothbrushes…"</string>
  <string name="no_tb_detected">No toothbrush detected !</string>
  <string name="scan">Scan</string>
  <string name="scanning">Scanning</string>
  <string name="err_login_not_possible">Impossible to login</string>
  <string name="create_account">Create Account</string>
  <string name="or_login">Or login</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="impossible_to_create_an_account">Impossible to create an account</string>
  <string name="forget_toothbrush">"Forget this toothbrush"</string>
  <string name="toothbrush_name">"Name"</string>
  <string name="toothbrush_personalized_name">"Personalized name"</string>
  <string name="toothbrush_none">"None"</string>
  <string name="toothbrush_serial_number">"Serial number"</string>
  <string name="toothbrush_mac">"MAC address"</string>
  <string name="toothbrush_hardware_version">"Hardware version"</string>
  <string name="toothbrush_software_version">"Software version"</string>
  <string name="ota_toothbrush_title">"Firmware Version"</string>
  <string name="hardware_version_title">"Hardware Version"</string>
  <string name="software_version_title">"Firmware Version"</string>
  <string name="battery_level">"Battery level"</string>
  <string name="user_mode_title">"Toothbrush user"</string>
  <string name="pairing_impossible">Impossible to pair with this toothbrush</string>
  <string name="popup_brushing_record_title">"Well done!"</string>
  <string name="popup_brushing_record_message_singular">"You just synced 1 offline brushing."</string>
  <string name="popup_brushing_record_message_multiple">"You just synced %d offline brushing sessions."</string>
  <string name="ok">Ok</string>
  <string name="next">Next</string>

  <string name="sign_up_profile_info_title">"Let's get to know each other"</string>

  <string name="profile_information_name">"First Name"</string>
  <string name="profile_information_name_hint">"Your first name"</string>
  <string name="profile_information_age">"Age"</string>
  <string name="profile_information_age_hint">"How old are you?"</string>
  <string name="profile_information_gender_hint">"Gender"</string>
  <string name="profile_information_handedness_hint">"Handedness"</string>
  <string name="profile_years_old">"years old"</string>
  <string name="profile_created_title">"Hurray!"</string>
  <string name="profile_created_message">"Your currentProfile has been created. You are now ready to brush your teeth!"</string>
  <string name="no_tb_connected">No toothbrush to connect to !</string>
  <string name="enable_internet">Please enable internet for update</string>
  <string name="popup_update_required">Update required !</string>
  <string name="update_now">Update now</string>
  <string name="popup_update_required_desc">The toothbrush is in an unusable state and needs to be upgraded.</string>
  <string name="update_available">Update available !</string>
  <string name="cancel">Cancel</string>
  <string name="popup_update_available_desc">A new version is available for the toothbrush</string>
  <string name="error_try_again">Error, Please try again</string>
  <string name="unlinked">Unlinked</string>
  <string name="data_brushing_between_title">Get brushing data in a time range.\nTouch the dates to modify them.</string>
  <string name="data_brushing_between_button">Get brushing data</string>
  <string name="data_brushing_between_result">Current profile brushed %1$d times from %2$s to %3$s.</string>
  <string name="selected_days">Selected Days</string>
  <string name="selected_weeks">Selected Weeks</string>
  <string name="profile">Profile</string>
  <string name="activities">Activities</string>
  <string name="last_session">Last session</string>
  <string name="brushing_data">Brushing Data</string>
  <string name="avg_brushing_duration_past_week">Avg brushing duration past week</string>
  <string name="avg_brushing_surface_past_week">Avg brushing surface past week</string>
  <string name="total_brushing_session_count">Total brushing session count</string>
  <string name="speed">Speed</string>
  <string name="angle">Angle</string>
  <string name="movement">Movement</string>
  <string name="verification_code_received_by_sms">Verification code received by sms</string>
  <string name="open_unity_game_list">Unity game list</string>
  <string name="open_coach">Coach +</string>
  <string name="open_guided_brushing">Guided Brushing</string>
  <string name="open_pirate_compat">Pirate Compat</string>
  <string name="open_test_brushing">Test Brushing</string>
  <string name="brushing_quiz">Brushing Quiz</string>
  <string name="brushing_mode">Brushing Mode</string>
  <string name="test_your_angle">Test Your Angle</string>
  <string name="speed_control">Speed Control</string>
  <string name="phone_number">Phone number</string>
  <string name="verify">Verify</string>
  <string name="unlink_phone_number">Unlink phone number</string>
  <string name="wechat">WeChat</string>
  <string name="link">Link</string>
  <string name="unlink_wechat">Unlink WeChat</string>
  <string name="check_wechat_account_usage">Check WeChat account usage</string>
  <string name="delete_account">Delete Account</string>
  <string name="aggregated_data">Aggregated Data</string>
  <string name="login_with_sms">Login with SMS</string>
  <string name="login_with_wechat">Login with WeChat</string>
  <string name="or_sign_up">Or sign up</string>
  <string name="switch_profile">Switch Profile</string>
  <string name="open_pirate">Open Pirate</string>
  <string name="unity_games">Unity Games</string>
  <string name="scan_for_toothbrushes">Scan for toothbrushes</string>
  <string name="toothbrush_detail">Toothbrush detail</string>
  <string name="day">Day</string>
  <string name="select_a_day">select a day</string>
  <string name="days">Days</string>
  <string name="add_a_day">Add a day</string>
  <string name="add_a_week">Add a week</string>
  <string name="confirm">confirm</string>
  <string name="weeks">Weeks</string>
  <string name="month">Month</string>
  <string name="select_a_month">select a month</string>
  <string name="months">Months</string>
  <string name="add_a_month">Add a month</string>
  <string name="selected_months">Selected Months</string>
  <string name="period">Period</string>
  <string name="start_date">Start date</string>
  <string name="end_date">End date</string>
  <string name="profile_id">Profile ID:</string>
  <string name="creation_time">Creation Time:</string>
  <string name="duration">Duration:</string>
  <string name="average_surface">Average Surface:</string>
  <string name="average_checkup">Average Checkup:</string>
  <string name="assigned_date">Assigned Date:</string>
  <string name="dsp_firmware_version">DSP</string>
  <string name="no_dsp">No DSP on this device</string>
</resources>
