<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/navigation_tab_1"
    android:enabled="true"
    android:icon="@drawable/ic_home"
    android:title="@string/profile"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/navigation_tab_2"
    android:enabled="true"
    android:icon="@drawable/ic_brush"
    android:title="@string/activities"
    app:showAsAction="ifRoom" />


  <item
    android:id="@+id/navigation_tab_3"
    android:enabled="true"
    android:icon="@drawable/ic_checkup"
    android:title="@string/last_session"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/navigation_tab_4"
    android:enabled="true"
    android:icon="@drawable/ic_statistics"
    android:title="@string/brushing_data"
    app:showAsAction="ifRoom" />
</menu>