<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:orientation="horizontal"
      android:weightSum="3">

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
          android:id="@+id/tvNumberBrushings"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/black"
          android:textSize="20sp" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@string/total_brushing_session_count"
          android:textColor="@android:color/black"
          android:textSize="12sp" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
          android:id="@+id/tvAverageBrushingDuration"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/black"
          android:textSize="20sp" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@string/avg_brushing_duration_past_week"
          android:textColor="@android:color/black"
          android:textSize="12sp" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
          android:id="@+id/tvAverageBrushingSurface"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/black"
          android:textSize="20sp" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@string/avg_brushing_surface_past_week"
          android:textColor="@android:color/black"
          android:textSize="12sp" />

      </LinearLayout>

    </LinearLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="40dp"
      android:text="@string/phone_number"
      android:textSize="20sp" />

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

      <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/verify" />

      <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/verify"
        android:inputType="phone" />
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/confirmation_panel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:visibility="gone">

      <Button
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/link" />

      <EditText
        android:id="@+id/verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/link"
        android:hint="@string/verification_code_received_by_sms"
        android:inputType="number" />
    </RelativeLayout>

    <Button
      android:id="@+id/unlink_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/unlink_phone_number" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="40dp"
      android:text="@string/wechat"
      android:textSize="20sp" />

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

      <Button
        android:id="@+id/wc_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/link" />

      <TextView
        android:id="@+id/wc_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/wc_link" />
    </RelativeLayout>

    <Button
      android:id="@+id/wc_unlink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/unlink_wechat" />

    <Button
      android:id="@+id/wc_check"
      android:layout_width="@dimen/round_button_width"
      android:layout_height="@dimen/round_button_height"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="40dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/bg_primary_color"
      android:elevation="1dp"
      android:text="@string/check_wechat_account_usage"
      android:textColor="@android:color/white" />

    <Button
      android:id="@+id/delete_account"
      android:layout_width="@dimen/round_button_width"
      android:layout_height="@dimen/round_button_height"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/bg_primary_color"
      android:elevation="1dp"
      android:text="@string/delete_account"
      android:textColor="@android:color/white" />

  </LinearLayout>
</ScrollView>